# RPCSX-iOS

./: .gitignore  .gitmodules  README.md
RPCS3/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
RPCS3.xcodeproj/: project.pbxproj
RPCS3.xcodeproj/xcshareddata/xcschemes/: RPCS3.xcscheme
RPCS3/Base.lproj/: Main.storyboard
Submodules/: .rx.version  CMakeLists.txt  native-lib.mm  prepare.sh  vcpkg.json
Submodules/patch/: LLVMExports.cmake
